# Mandelbrot-Set

./: .clang-format  .gitignore  .gitmodules  .vcpkg.json  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  coloring.h  main.cpp  main_window.cpp  main_window.h  perf_helper.cpp  perf_helper.h  picture.cpp  picture.h  render_layout.cpp  render_layout.h  vcpkg.json  workers.cpp  workers.h
